--- a/src/eChess/MainWindow.xaml
+++ b/src/eChess/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:eChess"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        x:Uid="MainWindow" Title="eChess" WindowState="Maximized" Height="1024" Width="1024" Background="DarkSlateGray" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
+        x:Uid="MainWindow" Title="eChess" WindowState="Maximized" Height="720" Width="1200" Background="DarkSlateGray" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <SolidColorBrush x:Key="SelectedBrush" Color="#FF00BFFF" Opacity="0.4"/>
         <SolidColorBrush x:Key="DefaultBrush" Color="Transparent"/>
@@ -18,12 +18,12 @@
                        Duration="0:0:1.5" BeginTime="0:0:0"/>
                 <DoubleAnimation Storyboard.TargetName="WinnerText" Storyboard.TargetProperty="Opacity" From="0" To="1" Duration="0:0:3" BeginTime="0:0:0"/>
                 <DoubleAnimation Storyboard.TargetName="ReasonText" Storyboard.TargetProperty="Opacity" From="0" To="1" Duration="0:0:3" BeginTime="0:0:0"/>
-                
-                <DoubleAnimation Storyboard.TargetName="ExitBtn" Storyboard.TargetProperty="Opacity" From="0" To="1" Duration="0:0:2" BeginTime="0:0:3.5"/>
-                <DoubleAnimation Storyboard.TargetName="NewGameBtn" Storyboard.TargetProperty="Opacity" From="0" To="1" Duration="0:0:2" BeginTime="0:0:3.5"/>
+
+                <DoubleAnimation Storyboard.TargetName="ExitBtn" Storyboard.TargetProperty="Opacity" From="0" To="1" Duration="0:0:3" BeginTime="0:0:0"/>
+                <DoubleAnimation Storyboard.TargetName="NewGameBtn" Storyboard.TargetProperty="Opacity" From="0" To="1" Duration="0:0:3" BeginTime="0:0:0"/>
             </Storyboard>
         </BeginStoryboard>
-        
+
         <Style x:Key="ButtonRoundedCorner" TargetType="Button">
             <Setter Property="Background" Value="{StaticResource DefaultBrush}"/>
             <Setter Property="Foreground" Value="White" />
@@ -38,7 +38,6 @@
                 </Setter.Value>
             </Setter>
         </Style>
-      
         <Style x:Key="EmptyField" TargetType="Button">
             <Setter Property="Template">
                 <Setter.Value>
@@ -132,13 +131,15 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Rectangle x:Name="BackgroundRectangle" Grid.ColumnSpan="8" Grid.RowSpan="3" Grid.Row="2" Fill="White"/>
+            <Rectangle x:Name="BackgroundRectangle" Grid.ColumnSpan="8" Grid.RowSpan="4" Grid.Row="2" Fill="White"/>
+            <Rectangle Height="2" Fill="DarkSlateBlue" Grid.Column="1" Grid.ColumnSpan="6" Grid.Row="2" VerticalAlignment="Center"/>
             <TextBlock x:Name="WinnerText" Foreground="DarkSlateBlue" Grid.RowSpan="1" Grid.ColumnSpan="8" Grid.Row="3" FontSize="70" FontStyle="Italic" FontWeight="Normal" TextAlignment="Center"/>
             <TextBlock x:Name="ReasonText" Foreground="Black" Grid.ColumnSpan="8" Grid.RowSpan="1" Grid.Row="4" FontSize="25" FontStyle="Normal" FontWeight="Light" TextAlignment="Center"/>
-            <Button x:Name="ExitBtn" Opacity="0" Grid.Column="0" Grid.Row="4" Style="{StaticResource MaterialDesignFlatAccentBgButton}" Content="Exit" Height="auto" BorderThickness="0" FontSize="30" FontWeight="Bold" Grid.ColumnSpan="2" Margin="30,5" Background="DeepSkyBlue" Click="ExitBtn_Click"/>
-            <Button x:Name="NewGameBtn" Opacity="0" Grid.Column="6" Grid.Row="4" Style="{StaticResource MaterialDesignFlatAccentBgButton}" Content="New game" Height="auto" BorderThickness="0" FontSize="30" FontWeight="Bold" Grid.ColumnSpan="2" Margin="30,5" Background="DeepSkyBlue" Click="NewGameBtn_Click"/>
+            <Rectangle Height="2" Fill="DarkSlateBlue" Grid.Column="2" Grid.ColumnSpan="4" Grid.Row="4" VerticalAlignment="Center" Margin="0,30,0,0"/>
+            <Button x:Name="ExitBtn" materialDesign:ButtonAssist.CornerRadius="15" Grid.Column="0" Grid.Row="5" Style="{StaticResource MaterialDesignFlatAccentBgButton}" Content="Exit" Height="auto" BorderThickness="0" FontSize="25" FontWeight="Bold" Grid.ColumnSpan="1" Width="auto" Margin="20,10" Background="DarkSlateBlue" Click="ExitBtn_Click"/>
+            <Button x:Name="NewGameBtn" materialDesign:ButtonAssist.CornerRadius="15" Grid.Column="7" Grid.Row="5" Style="{StaticResource MaterialDesignFlatAccentBgButton}" Content="New game" Height="auto" BorderThickness="0" FontSize="25" FontWeight="Bold" Grid.ColumnSpan="2" HorizontalAlignment="Center" Width="auto" Margin="0,10" Background="DarkSlateBlue" Click="NewGameBtn_Click"/>
         </Grid>
-        <Grid Background="DarkSlateGray" x:Name="Menu" Panel.ZIndex="1" Grid.ColumnSpan="8" Grid.RowSpan="8" Visibility="Visible">
+        <Grid x:Name="Overlay" Panel.ZIndex="1" Grid.ColumnSpan="8" Grid.RowSpan="8" Visibility="Visible">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
@@ -162,15 +163,50 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
-
             </Grid.RowDefinitions>
-            <TextBlock Text="eChess" FontSize="90" Grid.Column="4" Grid.RowSpan="2" Grid.ColumnSpan="4" Foreground="White" FontStyle="Italic" FontWeight="Bold" VerticalAlignment="Center"/>
-            <Button x:Name="StartLocalGame" Grid.Column="4" Grid.Row="3" Grid.ColumnSpan="3" Style="{StaticResource MaterialDesignFlatAccentBgButton}"  materialDesign:ButtonAssist.CornerRadius="10" Height="auto" BorderThickness="0" Content="Local game" FontSize="30" FontWeight="Bold" Background="DeepSkyBlue" Click="StartLocalGame_Click"/>
-            <Button x:Name="StartOnlineGame" Grid.Column="4" Grid.Row="5" Grid.ColumnSpan="3" Style="{StaticResource MaterialDesignFlatAccentBgButton}"  materialDesign:ButtonAssist.CornerRadius="10" Height="auto" BorderThickness="0" Content="Online game" FontSize="30" FontWeight="Bold" Background="DeepSkyBlue" Click="StartOnlineGame_Click"/>
-            <ProgressBar x:Name="ProgressRing" Style="{StaticResource MaterialDesignCircularProgressBar}" Grid.Row="6" Grid.Column="5" Height="auto" Width="auto" VerticalAlignment="Center" IsIndeterminate="True" Foreground="AliceBlue" Visibility="Collapsed"/>
-            <TextBox x:Name="NameTextBox" Grid.ColumnSpan="3" materialDesign:HintAssist.Hint="Username" Background="Transparent" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Grid.Row="8" Grid.Column="8" Foreground="White" Text="Anonymous" BorderThickness="0" FontSize="35" VerticalContentAlignment="Center" TextAlignment="Left" TextChanged="NameTextBox_TextChanged"/>
+            <Grid x:Name="Menu" Panel.ZIndex="1" Grid.ColumnSpan="11" Grid.RowSpan="9" Visibility="Visible">
+                <Grid.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="LightSeaGreen"/>
+                        <GradientStop Color="#FF1D5C59" Offset="1"/>
+                        <GradientStop Color="#FF2DA9A3"/>
+                    </LinearGradientBrush>
+                </Grid.Background>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <TextBlock Text="eChess" FontSize="90" Grid.Column="4" Grid.RowSpan="2" Grid.ColumnSpan="4" Foreground="White" FontStyle="Italic" FontWeight="Bold" VerticalAlignment="Center"/>
+                <Button x:Name="StartLocalGame"  Grid.Column="4" Grid.Row="3" Grid.ColumnSpan="3" Style="{StaticResource MaterialDesignFlatAccentBgButton}"  materialDesign:ButtonAssist.CornerRadius="15" Height="auto" BorderThickness="0" Content="Local game" FontSize="30" Foreground="White" FontWeight="Bold" Background="DarkSlateBlue" Click="StartLocalGame_Click"/>
+                <Button x:Name="StartOnlineGame" Grid.Column="4" Grid.Row="5" Grid.ColumnSpan="3" Style="{StaticResource MaterialDesignFlatAccentBgButton}"  materialDesign:ButtonAssist.CornerRadius="15" Height="auto" BorderThickness="0" Content="Online game" FontSize="30" Foreground="White" FontWeight="Bold" Background="DarkSlateBlue" Click="StartOnlineGame_Click"/>
+                <ProgressBar x:Name="ProgressRing" Style="{StaticResource MaterialDesignCircularProgressBar}" Grid.Row="6" Grid.Column="5" Height="auto" Width="auto" VerticalAlignment="Center" IsIndeterminate="True" Foreground="AliceBlue" Visibility="Collapsed"/>
+                <TextBox x:Name="NameTextBox" Grid.ColumnSpan="3" materialDesign:HintAssist.Hint="Username" Background="Transparent" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Grid.Row="7" Grid.RowSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="8" Foreground="White" Text="Anonymous" BorderThickness="0" FontSize="35" TextAlignment="Left" TextChanged="NameTextBox_TextChanged"/>
+            </Grid>
+            <TextBox Visibility="Collapsed" x:Name="OpponentText" Grid.Column="9" Panel.ZIndex="1" VerticalAlignment="Bottom" Grid.ColumnSpan="2" TextAlignment="Center" Text="Opponent:" Foreground="DarkGray" BorderThickness="0" FontStyle="Italic" Grid.Row="3" Background="Transparent" FontSize="35" />
+            <TextBox Visibility="Collapsed" x:Name="OpponentName" Background="Transparent" BorderThickness="0"  Panel.ZIndex="1" Grid.ColumnSpan="2" Grid.Row="4" Grid.RowSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="9" Foreground="White" Text="Anonymous" FontSize="25" FontWeight="Bold"/>
         </Grid>
-        <Grid x:Name="Grid" Width="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight}" RenderTransformOrigin="0.5,0.5">
+
+        <Grid Panel.ZIndex="1" Visibility="Collapsed" x:Name="Grid" Width="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight}" RenderTransformOrigin="0.5,0.5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
@@ -390,7 +426,6 @@
             <Button x:Name="WP8" Grid.Column="7" Grid.Row="6" Style="{StaticResource ButtonRoundedCorner}" Click="Piece_Click">
                 <Image x:Name="WP8Image" Source="Resources/WP.png"/>
             </Button>
-
 
 
             <Button x:Name="Field1_1" Panel.ZIndex="2" Background="Transparent" Grid.Column="0" Grid.Row="0" Style="{StaticResource EmptyField}" Click="Field_Click" Visibility="Collapsed"/>
