--- a/src/eChess/MainWindow.xaml
+++ b/src/eChess/MainWindow.xaml
@@ -13,7 +13,7 @@
         <SolidColorBrush x:Key="DefaultBrush" Color="Transparent"/>
         <BeginStoryboard x:Key="EndScreenAnimation">
             <Storyboard>
-                <DoubleAnimation DecelerationRatio="0.7" Storyboard.TargetName="EndScreenGrid" 
+                <DoubleAnimation DecelerationRatio="0.9" Storyboard.TargetName="EndScreenGrid" 
                        Storyboard.TargetProperty="Width" From="0" To="{Binding ElementName=ParentGrid, Path=ActualWidth}" 
                        Duration="0:0:1.5" BeginTime="0:0:0" />
                 <DoubleAnimation Storyboard.TargetName="WinnerText" Storyboard.TargetProperty="Opacity" From="0" To="1" Duration="0:0:3" BeginTime="0:0:0"/>
@@ -140,10 +140,10 @@
             <Rectangle x:Name="BackgroundRectangle" Grid.ColumnSpan="8" Grid.RowSpan="4" Grid.Row="2" Fill="White"/>
             <Rectangle Height="2" Fill="DarkSlateBlue" Grid.Column="1" Grid.ColumnSpan="6" Grid.Row="2" VerticalAlignment="Center"/>
             <TextBlock x:Name="WinnerText" Foreground="DarkSlateBlue" Grid.RowSpan="1" Grid.ColumnSpan="8" Grid.Row="3" FontSize="70" FontStyle="Italic" FontWeight="Normal" TextAlignment="Center"/>
-            <TextBlock x:Name="ReasonText" Foreground="Black" Grid.ColumnSpan="8" Grid.RowSpan="1" Grid.Row="4" FontSize="25" FontStyle="Normal" FontWeight="Light" TextAlignment="Center"/>
+            <TextBlock x:Name="ReasonText" Foreground="Black" Grid.ColumnSpan="8" VerticalAlignment="Top" Margin="0,10,0,0" Grid.RowSpan="1" Grid.Row="4" FontSize="25" FontStyle="Normal" FontWeight="Light" TextAlignment="Center"/>
             <Rectangle Height="2" Fill="DarkSlateBlue" Grid.Column="2" Grid.ColumnSpan="4" Grid.Row="4" VerticalAlignment="Center" Margin="0,30,0,0"/>
             <Button x:Name="ExitBtn" materialDesign:ButtonAssist.CornerRadius="15" Grid.Column="0" Grid.Row="5" Style="{StaticResource MaterialDesignFlatAccentBgButton}" Content="Exit" Height="auto" BorderThickness="0" FontSize="25" FontWeight="Bold" Grid.ColumnSpan="1" Width="auto" Margin="20,10" Background="DarkSlateBlue" Click="ExitBtn_Click"/>
-            <Button x:Name="NewGameBtn" materialDesign:ButtonAssist.CornerRadius="15" Grid.Column="7" Grid.Row="5" Style="{StaticResource MaterialDesignFlatAccentBgButton}" Content="New game" Height="auto" BorderThickness="0" FontSize="25" FontWeight="Bold" Grid.ColumnSpan="2" HorizontalAlignment="Center" Width="auto" Margin="0,10" Background="DarkSlateBlue" Click="NewGameBtn_Click"/>
+            <Button x:Name="NewGameBtn" materialDesign:ButtonAssist.CornerRadius="15" Grid.Column="7" Grid.Row="5" Style="{StaticResource MaterialDesignFlatAccentBgButton}" Content="New game" Height="auto" BorderThickness="0" FontSize="20" FontWeight="Bold" Grid.ColumnSpan="2" HorizontalAlignment="Center" Width="auto" Margin="0,10" Background="DarkSlateBlue" Click="NewGameBtn_Click"/>
         </Grid>
         <Grid x:Name="Overlay" Panel.ZIndex="1" Grid.ColumnSpan="8" Grid.RowSpan="8" Visibility="Visible">
             <Grid.ColumnDefinitions>
@@ -209,8 +209,8 @@
                 <ProgressBar x:Name="ProgressRing" Style="{StaticResource MaterialDesignCircularProgressBar}" Grid.Row="6" Grid.Column="5" Height="auto" Width="auto" VerticalAlignment="Center" IsIndeterminate="True" Foreground="AliceBlue" Visibility="Collapsed"/>
                 <TextBox x:Name="NameTextBox" Grid.ColumnSpan="3" materialDesign:HintAssist.Hint="Username" Background="Transparent" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Grid.Row="7" Grid.RowSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="8" Foreground="White" Text="Anonymous" BorderThickness="0" FontSize="35" TextAlignment="Left" TextChanged="NameTextBox_TextChanged"/>
             </Grid>
-            <TextBox Visibility="Collapsed" x:Name="OpponentText" Grid.Column="9" Panel.ZIndex="1" VerticalAlignment="Bottom" Grid.ColumnSpan="2" TextAlignment="Center" Text="Opponent:" Foreground="DarkGray" BorderThickness="0" FontStyle="Italic" Grid.Row="3" Background="Transparent" FontSize="35" />
-            <TextBox Visibility="Collapsed" x:Name="OpponentName" Background="Transparent" BorderThickness="0"  Panel.ZIndex="1" Grid.ColumnSpan="2" Grid.Row="4" Grid.RowSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="9" Foreground="White" Text="Anonymous" FontSize="25" FontWeight="Bold"/>
+            <TextBlock Visibility="Collapsed" x:Name="OpponentText" Grid.Column="9" Panel.ZIndex="1" VerticalAlignment="Bottom" Grid.ColumnSpan="2" TextAlignment="Center" Text="Opponent:" Foreground="LightGray"  FontStyle="Italic" Grid.Row="3" Background="Transparent" FontSize="35" />
+            <TextBlock Visibility="Collapsed" x:Name="OpponentName" Background="Transparent" Panel.ZIndex="1" Grid.ColumnSpan="2" Grid.Row="4" Grid.RowSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="9" Foreground="White" Text="Anonymous" FontSize="25" FontWeight="Bold"/>
         </Grid>
 
         <Grid Panel.ZIndex="1" Visibility="Collapsed" x:Name="Grid" Width="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight}" RenderTransformOrigin="0.5,0.5">
