--- a/src/eChess/MainWindow.xaml
+++ b/src/eChess/MainWindow.xaml
@@ -29,7 +29,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
-                        <Border CornerRadius="50" Margin="2" Background="{TemplateBinding Background}" BorderThickness="2">
+                        <Border CornerRadius="50" Background="{TemplateBinding Background}" BorderThickness="2">
                             <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center">
                             </ContentPresenter>
                         </Border>
@@ -142,10 +142,18 @@
             <TextBlock x:Name="WinnerText" Foreground="DarkSlateBlue" Grid.RowSpan="1" Grid.ColumnSpan="8" Grid.Row="3" FontSize="70" FontStyle="Italic" FontWeight="Normal" TextAlignment="Center"/>
             <TextBlock x:Name="ReasonText" Foreground="Black" Grid.ColumnSpan="8" VerticalAlignment="Top" Margin="0,10,0,0" Grid.RowSpan="1" Grid.Row="4" FontSize="25" FontStyle="Normal" FontWeight="Light" TextAlignment="Center"/>
             <Rectangle Height="2" Fill="DarkSlateBlue" Grid.Column="2" Grid.ColumnSpan="4" Grid.Row="4" VerticalAlignment="Center" Margin="0,30,0,0"/>
-            <Button x:Name="ExitBtn" materialDesign:ButtonAssist.CornerRadius="15" Grid.Column="0" Grid.Row="5" Style="{StaticResource MaterialDesignFlatAccentBgButton}" Content="Exit" Height="auto" BorderThickness="0" FontSize="25" FontWeight="Bold" Grid.ColumnSpan="1" Width="auto" Margin="20,10" Background="DarkSlateBlue" Click="ExitBtn_Click"/>
-            <Button x:Name="NewGameBtn" materialDesign:ButtonAssist.CornerRadius="15" Grid.Column="7" Grid.Row="5" Style="{StaticResource MaterialDesignFlatAccentBgButton}" Content="New game" Height="auto" BorderThickness="0" FontSize="20" FontWeight="Bold" Grid.ColumnSpan="2" HorizontalAlignment="Center" Width="auto" Margin="0,10" Background="DarkSlateBlue" Click="NewGameBtn_Click"/>
+            <Button x:Name="ExitBtn" materialDesign:ButtonAssist.CornerRadius="15" Grid.Column="0" Grid.Row="5" Style="{StaticResource MaterialDesignFlatAccentBgButton}" Content="Exit" Height="auto" BorderThickness="0" FontSize="24" FontWeight="Bold" Grid.ColumnSpan="1" Width="auto" Margin="10,10" Background="DarkSlateBlue" Click="ExitBtn_Click"/>
+            <Button x:Name="NewGameBtn" materialDesign:ButtonAssist.CornerRadius="15" Grid.Column="7" Grid.Row="5" Style="{StaticResource MaterialDesignFlatAccentBgButton}" Content="New game" Height="auto" BorderThickness="0" FontSize="17"  FontWeight="Bold" Grid.ColumnSpan="2" HorizontalAlignment="Center"  Margin="0,10" Background="DarkSlateBlue" Click="NewGameBtn_Click"/>
         </Grid>
-        <Grid x:Name="Overlay" Panel.ZIndex="1" Grid.ColumnSpan="8" Grid.RowSpan="8" Visibility="Visible">
+
+        <Grid x:Name="Menu" Panel.ZIndex="1" Grid.ColumnSpan="11" Grid.RowSpan="9" Visibility="Visible">
+            <Grid.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="LightSeaGreen"/>
+                    <GradientStop Color="#FF1D5C59" Offset="1"/>
+                    <GradientStop Color="#FF2DA9A3"/>
+                </LinearGradientBrush>
+            </Grid.Background>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
@@ -170,49 +178,55 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Grid x:Name="Menu" Panel.ZIndex="1" Grid.ColumnSpan="11" Grid.RowSpan="9" Visibility="Visible">
-                <Grid.Background>
+            <Frame x:Name="UpdatePage" Panel.ZIndex="1" Grid.ColumnSpan="11" Grid.RowSpan="9" Visibility="Collapsed"/>
+            <TextBlock Text="eChess" FontSize="90" Grid.Column="3" TextAlignment="Center" Grid.RowSpan="2" Grid.ColumnSpan="5" Foreground="White" FontStyle="Italic" FontWeight="Bold" VerticalAlignment="Center"/>
+            <Button x:Name="StartLocalGame"  Grid.Column="4" Grid.Row="3" Grid.ColumnSpan="3" Style="{StaticResource MaterialDesignRaisedDarkButton}"  materialDesign:ButtonAssist.CornerRadius="15" Height="auto" BorderThickness="0" Content="Local game" FontSize="30" Foreground="White" FontWeight="Bold" Click="StartLocalGame_Click">
+                <Button.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="LightSeaGreen"/>
-                        <GradientStop Color="#FF1D5C59" Offset="1"/>
-                        <GradientStop Color="#FF2DA9A3"/>
+                        <GradientStop Color="#FF705CEC" Offset="0"/>
+                        <GradientStop Color="#FF483A9C" Offset="1"/>
+                        <GradientStop Color="#FF5949C3" Offset="0"/>
                     </LinearGradientBrush>
-                </Grid.Background>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Frame x:Name="UpdatePage" Panel.ZIndex="1" Grid.ColumnSpan="11" Grid.RowSpan="9" Visibility="Collapsed"/>
-                <TextBlock Text="eChess" FontSize="90" Grid.Column="4" Grid.RowSpan="2" Grid.ColumnSpan="4" Foreground="White" FontStyle="Italic" FontWeight="Bold" VerticalAlignment="Center"/>
-                <Button x:Name="StartLocalGame"  Grid.Column="4" Grid.Row="3" Grid.ColumnSpan="3" Style="{StaticResource MaterialDesignFlatAccentBgButton}"  materialDesign:ButtonAssist.CornerRadius="15" Height="auto" BorderThickness="0" Content="Local game" FontSize="30" Foreground="White" FontWeight="Bold" Background="DarkSlateBlue" Click="StartLocalGame_Click"/>
-                <Button x:Name="StartOnlineGame" Grid.Column="4" Grid.Row="5" Grid.ColumnSpan="3" Style="{StaticResource MaterialDesignFlatAccentBgButton}"  materialDesign:ButtonAssist.CornerRadius="15" Height="auto" BorderThickness="0" Content="Online game" FontSize="30" Foreground="White" FontWeight="Bold" Background="DarkSlateBlue" Click="StartOnlineGame_Click"/>
-                <ProgressBar x:Name="ProgressRing" Style="{StaticResource MaterialDesignCircularProgressBar}" Grid.Row="6" Grid.Column="5" Height="auto" Width="auto" VerticalAlignment="Center" IsIndeterminate="True" Foreground="AliceBlue" Visibility="Collapsed"/>
-                <TextBox x:Name="NameTextBox" Grid.ColumnSpan="3" materialDesign:HintAssist.Hint="Username" Background="Transparent" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Grid.Row="7" Grid.RowSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="8" Foreground="White" Text="Anonymous" BorderThickness="0" FontSize="35" TextAlignment="Left" TextChanged="NameTextBox_TextChanged"/>
-            </Grid>
-            <TextBlock Visibility="Collapsed" x:Name="OpponentText" Grid.Column="9" Panel.ZIndex="1" VerticalAlignment="Bottom" Grid.ColumnSpan="2" TextAlignment="Center" Text="Opponent:" Foreground="LightGray"  FontStyle="Italic" Grid.Row="3" Background="Transparent" FontSize="35" />
-            <TextBlock Visibility="Collapsed" x:Name="OpponentName" Background="Transparent" Panel.ZIndex="1" Grid.ColumnSpan="2" Grid.Row="4" Grid.RowSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="9" Foreground="White" Text="Anonymous" FontSize="25" FontWeight="Bold"/>
+                </Button.Background>
+            </Button>
+            <Button x:Name="StartOnlineGame" Grid.Column="4" Grid.Row="5" Grid.ColumnSpan="3" Style="{StaticResource MaterialDesignRaisedDarkButton}"  materialDesign:ButtonAssist.CornerRadius="15" Height="auto" BorderThickness="0" Content="Online game" FontSize="30" Foreground="White" FontWeight="Bold" Click="StartOnlineGame_Click">
+                <Button.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FF705CEC" Offset="0"/>
+                        <GradientStop Color="#FF483A9C" Offset="1"/>
+                        <GradientStop Color="#FF5949C3" Offset="0"/>
+                    </LinearGradientBrush>
+                </Button.Background>
+            </Button>
+            <ProgressBar x:Name="ProgressRing" Style="{StaticResource MaterialDesignCircularProgressBar}" Grid.Row="6" Grid.Column="5" Height="auto" Width="auto" VerticalAlignment="Center" IsIndeterminate="True" Foreground="AliceBlue" Visibility="Collapsed"/>
+            <TextBox x:Name="NameTextBox" Grid.ColumnSpan="3" materialDesign:HintAssist.Hint="Username" Background="Transparent" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Grid.Row="7" Grid.RowSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="8" Foreground="White" Text="Anonymous" BorderThickness="0" FontSize="35" TextAlignment="Left" TextChanged="NameTextBox_TextChanged"/>
         </Grid>
 
+        <Grid Panel.ZIndex="1" Visibility="Visible" x:Name="Grid2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <TextBlock Visibility="Collapsed" x:Name="OpponentText" Grid.Column="7" VerticalAlignment="Center" Grid.ColumnSpan="2" TextAlignment="Center" Text="Opponent:" Foreground="LightGray" FontStyle="Italic" Grid.Row="3" FontSize="35" />
+            <TextBlock Visibility="Collapsed" x:Name="OpponentName" Grid.ColumnSpan="2" Grid.Row="4" Grid.RowSpan="2" VerticalAlignment="Top" HorizontalAlignment="Center" Grid.Column="7" Foreground="White" Text="Anonymous" FontSize="25" FontWeight="Bold"/>
+        </Grid>
         <Grid Panel.ZIndex="1" Visibility="Collapsed" x:Name="Grid" Width="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight}" RenderTransformOrigin="0.5,0.5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
